@@ -84,6 +84,7 @@ Diogo Lemos (dmlemos)
 Dmitry Frank (dimonomid)
 dmocek
 eco0414
+Ed Pavlov
 Egor Gumenyuk (boo1ean)
 einhander
 elricbk
